Fix T93498: Cycles fast GI add method affected by bounces settings

This is only for the replace method.